--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ html, body {
     min-height: 200vh;
     font-family: var(--fonte);
     font-size: 12.5px;
+    overflow-x: hidden;
 }
 
 @media (max-width: 750px) {
@@ -122,8 +123,8 @@ section.imagem > h1 {
     overflow-x: hidden;
     overflow-y: hidden;
 
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
+    /*scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;*/
     
 }
 
@@ -165,16 +166,15 @@ section.imagem > h1 {
     flex: none;
     width: 100%;
     height: 600px;
-    scroll-snap-align: start;
+    /*scroll-snap-align: start;
 
-    pointer-events: none;
+    pointer-events: none;*/
 }
 
 .item > img {
     width: 100%;
     height: 100%;
     
-    object-fit: cover;
 }
 
 
