--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,31 @@ nav {
     align-items: center;
 }
 
+.logo {
+    /*font-size: 48px;
+    color: #fff;
+    padding-top: 50px;*/
+    height: 170px;
+    margin-top: 55px;
+}
+
+.nav-list {
+    display: flex;
+    gap: 32px;
+    list-style: none; /* tira as bolinhas da lista */
+    padding-top: 50px; /* afasta do topo */
+}
+
+.nav-list a {
+    font-size: 18px;
+    color: #fff;
+    padding-block: 16px;
+}
+
+.nav-list a:hover {
+    color: #c94304;
+}
+
 section {
     /*padding-bottom: 30vh;*/
     line-height: 2em;
@@ -135,7 +160,7 @@ section.imagem > h1 {
     left: 0;
     right: auto;
     bottom: 0;
-    /*font-size:20px */
+    font-size: 30px; /* tamanho da seta */
     line-height: 250px;
     text-align: center;
     color: #fff;
@@ -175,32 +200,6 @@ section.imagem > h1 {
     width: 100%;
     height: 100%;
     
-}
-
-
-
-
-.logo {
-    font-size: 48px;
-    color: #fff;
-    padding-top: 50px;
-}
-
-.nav-list {
-    display: flex;
-    gap: 32px;
-    list-style: none; /* tira as bolinhas da lista */
-    padding-top: 50px; /* afasta do topo */
-}
-
-.nav-list a {
-    font-size: 18px;
-    color: #fff;
-    padding-block: 16px;
-}
-
-.nav-list a:hover {
-    color: #c94304;
 }
 
 
