--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ section {
 }
 
 /* imagem com mecânico */
-
 section.normal {
     display: flex;
     align-items: left;
@@ -131,15 +130,6 @@ section.imagem > h1 {
     width: 500px;
 }
 
-
-/*section#img {
-    
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/2023-09-19_12-24.png'); /* linear-gradiente: pelicula */
-   /* background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-}*/
-
 /* slider */
 
 #carousel {
@@ -147,9 +137,6 @@ section.imagem > h1 {
     width: 98.8vw;
     overflow-x: hidden;
     overflow-y: hidden;
-
-    /*scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;*/
     
 }
 
@@ -221,6 +208,21 @@ section.imagem > h1 {
     margin-top: 5px;
     position: relative;
     transition: 0.3s;
+}
+
+/* seção do vídeo */
+
+section.video {
+    background-color: #000000;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.video-player {
+    margin-top: 25px;
 }
 
 @media ( max-width: 750px ) {
