--- a/css/contato.css
+++ b/css/contato.css
@@ -62,3 +62,9 @@ section input, form textarea {
     box-sizing: border-box;
     border: none;
 }
+
+@media only screen and (max-width: 767px) {
+    section form {
+        max-width: 90%; /* Faça o formulário ocupar 100% da largura em telas menores */
+    }
+}
