--- a/css/equipe.css
+++ b/css/equipe.css
@@ -190,45 +190,92 @@ hr {
     width: 361px;
 }
 
-@media screen and (max-width: 480px) {
-    header {
-        width: 220%;
-    }
-    a > img {
-        height: 50px;
-    }
 
-    .container {
-        width: 100%;
-        box-sizing: border-box;
-    }
+@media only screen and (max-width: 767px) {
+        header {
+            padding-bottom: 20px;
+        }
+    
+        nav {
+            height: auto;
+            flex-direction: row;
+            align-items: center;
+        }
+    
+        .logo {
+            height: 120px;
+            margin-top: 20px;
+        }
+    
+        .nav-list {
+            flex-direction: row;
+            align-items: center;
+            padding-top: 20px;
+        }
+    
+        .nav-list a {
+            font-size: 16px;
+            padding-block: 12px;
+        }
+    
+        .hamburger {
+            display: block; 
+}
 
-    .caixas {
-        width: 100%;
-        float: none;
-    }
 
-    .caixa-1,
-    .caixa-2,
-    .caixa-3,
-    .caixa-4 {
+.container {
+    width: 80%;
+    max-width: 920px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.caixas {
+    width: 90%;
+    float: none; 
+    color: #fff;
+}
+
+.caixa-1,
+.caixa-2,
+.caixa-3,
+.caixa-4,
+.caixa-5 {
     width: 100%;
-    margin-right: 0;
-    float: none;
+    padding: 10px;
+    margin-bottom: 5px;
+    background-color: #333232;
 }
 
 .caixa-1 > img,
 .caixa-2 > img,
 .caixa-3 > img,
-.caixa-4 > img {
-    height: 80%;
-    width: 80%;
+.caixa-4 > img,
+.caixa-5 > img {
+    width: 95%; /* Faz com que a imagem ocupe 100% da largura da caixa */
+    height: auto; /* Mantém a proporção da imagem */
+    padding: 10px;
+
 }
 
-.barra-lateral {
-    width: 100%;
-    float: none;
-    padding-right: 0;
+.caixa-1 p,
+.caixa-2 p,
+.caixa-3 p,
+.caixa-4 p,
+.caixa-5 p {
+    font-size: 14px; /* Ajuste o tamanho da fonte conforme necessário */
 }
 
-}   
+.caixa-1 h2,
+.caixa-2 h2,
+.caixa-3 h2,
+.caixa-4 h2,
+.caixa-5 h2 {
+    font-size: 18px; /* Ajuste o tamanho da fonte conforme necessário */
+}
+
+.data-post {
+    font-size: 0.7em; /* Ajuste o tamanho da fonte conforme necessário */
+}
+
+}
